--- a/templates/etc/collectd/collectd.conf.d/haproxy.conf.j2
+++ b/templates/etc/collectd/collectd.conf.d/haproxy.conf.j2
@@ -5,13 +5,12 @@
 </LoadPlugin>
 
 <Plugin python>
-  ModulePath "{{ ubuntu_1604_collectd_haproxy_install_path }}/haproxy.py"
-
+  ModulePath "{{ collectd_plugin_haproxy_install_path }}/haproxy.py"
   Import haproxy
 
   <Module haproxy>
-    Socket "/var/lib/haproxy/stats"
-{% for monitor in ubuntu_1604_collectd_haproxy_proxy_monitors | default([]) %}
+    Socket "{{ collectd_plugin_haproxy_socket }}"
+{% for monitor in collectd_plugin_haproxy_proxy_monitors | default([]) %}
     ProxyMonitor "{{ monitor }}"
 {% endfor %}
   </Module>
