Fix incorrect ModulePath

--- a/templates/etc/collectd/collectd.conf.d/haproxy.conf.j2
+++ b/templates/etc/collectd/collectd.conf.d/haproxy.conf.j2
@@ -5,7 +5,7 @@
 </LoadPlugin>
 
 <Plugin python>
-  ModulePath "{{ collectd_plugin_haproxy_install_path }}/haproxy.py"
+  ModulePath "{{ collectd_plugin_haproxy_install_path }}"
   Import haproxy
 
   <Module haproxy>
